When uploading exercises then labels can be applied.